--- a/sever/package.json
+++ b/sever/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
+    "dev":"nodemon app.js",
     "build":"npm i"
   },
   "repository": {
